fix education block overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1157,6 +1157,7 @@ footer {
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 1rem;
+        max-width: 400px;
 
         h3, span {
             float: none;
